--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Tecace : 开发中的工具类">
+    <meta name="description" content="全忠的个人博客 : Java程序人生">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Tecace</title>
+    <title>全忠的个人博客 -Java程序人生</title>
   </head>
 
   <body>
