--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/QuanZhong/TecAce">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/QuanZhong">Fallow me on GitHub</a>
 
           <h1 id="project_title">Tecace</h1>
           <h2 id="project_tagline">开发中的工具类</h2>
